<resources>
    <string name="app_name">Screen Recorder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="label_permissions">PERMISSONS</string>
    <string name="label_setting_name">SETTING</string>
    <string name="lable_galerry_name">GALLERY</string>
    <string name="lable_cut_video">CUT VIDEO</string>
    <string name="label_video_effect">VIDEO EFFECT</string>
    <string name="label_video_time_scaling">TIME SCALING</string>
    <string name="dialog_confirm_delete">Delete Video</string>
    <!-- Title category-->
    <string name="setting_video_configuration">VIDEO CONFIGURATION</string>
    <string name="setting_audio_configuration">AUDIO CONFIGURATION</string>
    <string name="setting_camera_configuration">CAMERA CONFIGURATION</string>
    <string name="setting_text_logo_configuration">TEXT AND LOGO</string>
    <string name="setting_other_configuration">OTHERS</string>
    <string name="privacy_policy">PRIVACY POLICY</string>

    <!-- Video config title -->
    <string name="video_resolution_title">Resolution</string>
    <string name="video_frame_rate_title">Frame rate</string>
    <string name="video_bit_rate_title">Bit rate</string>
    <string name="video_orientation_title">Orientation</string>
    <!--Audio config title-->
    <string name="audio_recorder_title">Record Audio</string>
    <string name="audio_recorder_sum">Microphone</string>
    <!--Camera config title-->
    <string name="camera_title">Show camera</string>
    <string name="camera_sum">Show front camera</string>
    <!--Text and logo-->
    <string name="text_title">Show text</string>
    <string name="text_title_sum">Text will be display on screen</string>
    <string name="text_value">Text value</string>
    <string name="logo_title">Show logo</string>
    <string name="logo_sumary">Logo will be display on scree</string>
    <string name="logo_choice">Choice logo</string>
    <!--OTHER-->
    <string name="touches_show_title">Show touches</string>
    <string name="touches_show_sum">Enable show touches on screen</string>
    <string name="count_down_title">Countdown before start</string>
    <string name="count_down_sum">User countdown timer before starting recording</string>
    <string name="count_down_value_title">Countdown value</string>
    <!-- Pref key-->
    <string name="pref_video_config">pref_video_config</string>
    <string name="pref_audio_config">pref_audio_config</string>
    <string name="pref_resolution">pref_resolution</string>
    <string name="pref_frame_rate">pref_frame_rate</string>
    <string name="pref_bit_rate">pref_bit_rate</string>
    <string name="pref_orientation">pref_orientation</string>
    <string name="pref_record_audio_enable">pref_record_audio_enable</string>
    <string name="pref_camera_config">pref_camera_config</string>
    <string name="pref_camera_show_enable">pref_camera_show_enable</string>
    <string name="pref_text_logo_config">pref_text_logo_config</string>
    <string name="pref_text_show">pref_text_show</string>
    <string name="pref_logo_show">pref_logo_show</string>
    <string name="pref_text_value">pref_text_value</string>
    <string name="pref_logo_value">pref_logo_value</string>
    <string name="pref_other_config">pref_other_config</string>
    <string name="pref_show_touches_enable">pref_show_touches_enable</string>
    <string name="pref_countdown_enable">pref_countdown_enable</string>
    <string name="pref_counddown_value">pref_counddown_value</string>

    <string name="popup_menu_edit_cut">Cut Video</string>
    <string name="popup_menu_edit_replace_audio">Replace Audio</string>
    <string name="popup_menu_edit_effect">Video Effect</string>
    <string name="popup_menu_edit_time_scaling">Time Scaling</string>
    <string name="banner_ad_unit_id">ca-app-pub-9070811400863761/4567730795</string>
    <string name="instertitial_ad_unit_id">ca-app-pub-9070811400863761/6044463998</string>
    <string name="accept_alert">Please accept permisson. The permission only to draw task bar on
        screen
    </string>

    <!-- Menu names -->
    <string name="business_card">Business Card</string>
    <string name="calendar">Calendar</string>
    <string name="cloud">Cloud</string>
    <string name="facebook">Facebook</string>
    <string name="key">Key</string>
    <string name="mail">Mail</string>
    <string name="profile">Profile</string>
    <string name="tag">Tag</string>
    <string name="voice_search">Voice Search</string>

</resources>
